# GPLib

./: .gitignore  .gitmodules  CMakeLists.txt  FindEigen.cmake  GaussianProcess.hpp  README.md  bindings.i  demo.py
.devcontainer/: Dockerfile  devcontainer.json
app/: demo.py
demo/: demo.cpp  demo.hpp
lib/: .#GPRegressor.cpp  Aliases.hpp  GDOptimiser.cpp  GDOptimiser.h  GDOptimiser.hpp  GPRegressor.cpp  GPRegressor.h  GPRegressor.hpp  GaussianProcess.cpp  GaussianProcess.hpp  Kernels.cpp  Kernels.h  Kernels.hpp  LMOptimiser.cpp  LMOptimiser.h  Util.h  Util.hpp  typedefs.h  typedefs.hpp
lib/Kernels/: Kernel.cpp  SquaredExponential.cpp
lib/Optimisation/: GradientDescent.cpp  LevenbergMarquardt.cpp  ScaledConjugateGradient.cpp
lib/headers/: Aliases.hpp  GPRegressor.hpp  GaussianProcess.hpp  Kernels.hpp  Util.hpp
lib/headers/Kernels/: Kernel.hpp  SquaredExponential.hpp
lib/headers/Optimisation/: GradientDescent.hpp  LevenbergMarquardt.hpp  Optimiser.hpp  ScaledConjugateGradient.hpp
lib/include/GPLib/: Aliases.hpp  GPRegressor.hpp  GaussianProcess.hpp  Kernels.hpp
lib/include/GPLib/Kernels/: Kernel.hpp  SquaredExponential.hpp
lib/include/GPLib/Optimisation/: GradientDescent.hpp  LevenbergMarquardt.hpp  Optimiser.hpp  ScaledConjugateGradient.hpp
lib/src/: GPRegressor.cpp
lib/src/Kernels/: SquaredExponential.cpp
lib/src/Optimisation/: GradientDescent.cpp  LevenbergMarquardt.cpp  ScaledConjugateGradient.cpp
py/: setup.py
py/bindings/: bindings.cpp  bindings.hpp
swig/: bindings.i  getNumpySwig.sh
